--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movimento de Estoque</title>
+    <title>Menu</title>
     <link rel="stylesheet" href="./css/menu.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
             <p>MENU INICIAL</p>
             </div>
             <section id="A">
-                <input type="button" class="alinhaBtns" value="Ver Estoque" onclick="window.open('item.php','_self')">
+                <input type="button" class="alinhaBtns" value="Estoque" onclick="window.open('item.php','_self')">
 
                 <input type="button" class="alinhaBtns" value="Compras" onclick="window.open('compra.php','_self')">
 
